# PhilosoAgent

./: Kien_Shoku_history_2025.docx  main.py  pyproject.toml  履歴書.xlsx  職務経歴書.docx
src/philosoagent/: Phisoloagent.py  chains.py  config.py  prompts.py  tools.py
src/philosoagent/rag/: embedding.py  retrievers.py
