[project]
name = "philosoagent"
version = "0.1.0"
description = ""
authors = [
    {name = "chautuankien",email = "105159083+chautuankien@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "langgraph (>=0.4.3,<0.5.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "langchain-deepseek (>=0.1.3,<0.2.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "langchain-mongodb (>=0.6.1,<0.7.0)",
    "langchain-huggingface (>=0.2.0,<0.3.0)",
    "opik (>=1.7.18,<2.0.0)",
]

[tool.poetry]
packages = [{include = "philosoagent", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
